--- a/Lec_1/index.html
+++ b/Lec_1/index.html
@@ -30,8 +30,8 @@
             <h5>Subheading 4</h5>
             <h6>Subheading 5</h6>
     5. (<p>) Paragraph Element
-       Purpose: Defines a block of text (a paragraph).
-       <p>This is a paragraph of text.</p>
+       Purpose: Defines a <i>block</i> of text (a paragraph).
+       <p>This is a <b>paragraph</b> of text.</p>
        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam recusandae laboriosam cumque aliquam rerum tempore doloribus! Mollitia vitae eos ut nobis. Quibusdam qui ipsam animi sint quis fuga, provident facere.</p>
     </body>
 </html>
