--- a/Lec_11/external_css.html
+++ b/Lec_11/external_css.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     Learning External Css
-    <h1 class="hello">hello world</h1>
-    <h1 id="hello">hello world using id</h1>
+    <h1>hello world</h1>
+    <p>hello world</p>
+    <h2>hello</h2>
 </body>
 </html>
